objects/nitro__Nitro_PointCategoryAssignment__c.object
<CustomObject>
    <fields>
        <fullName>nitro__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__PointCategoryId__c</fullName>
        <label>Point Category Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__UserId__c</fullName>
        <label>User Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Nitro Point Category Assignment</label>
    <listViews>
        <fullName>nitro__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nitro Point Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nitro Point Category Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>